[gd_scene load_steps=12 format=2]

[ext_resource path="res://weapons/Weapon.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/Enemy.gd" type="Script" id=2]
[ext_resource path="res://actors/Health.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/prototypes/proto-tri-3.png" type="Texture" id=4]
[ext_resource path="res://actors/AI.gd" type="Script" id=5]
[ext_resource path="res://assets/prototypes/destroyed.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/prototypes/proto-square.png" type="Texture" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 1551.44

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25.5, 17 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 16 )

[sub_resource type="Animation" id=4]
resource_name = "spawn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.1, 0.1 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="Triangle" type="Sprite" parent="."]
visible = false
modulate = Color( 13.87, 0, 9.82, 1 )
rotation = 3.92699
texture = ExtResource( 4 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
rotation = 3.92699
polygon = PoolVector2Array( -23.3345, -24.7488, -23.3345, 23.3345, 24.0416, 24.0417 )

[node name="Health" parent="." instance=ExtResource( 3 )]

[node name="Weapon" parent="." instance=ExtResource( 1 )]

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="PlayerDetectionZone" type="Area2D" parent="AI" groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/PlayerDetectionZone"]
shape = SubResource( 1 )

[node name="PatrolTimer" type="Timer" parent="AI"]
wait_time = 3.0
one_shot = true

[node name="ChargeTimer" type="Timer" parent="AI"]
one_shot = true

[node name="ChargeDuration" type="Timer" parent="AI"]
one_shot = true

[node name="ChargeDir" type="Position2D" parent="AI"]
position = Vector2( 43, 0 )

[node name="ChargeDetection" type="Area2D" parent="AI"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AI/ChargeDetection"]
position = Vector2( 0.5, 0 )
shape = SubResource( 3 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Square" type="Sprite" parent="."]
modulate = Color( 13.87, 0, 9.82, 1 )
rotation = 1.5708
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spawn = SubResource( 4 )

[connection signal="body_entered" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="AI/PlayerDetectionZone" to="AI" method="_on_PlayerDetectionZone_body_exited"]
[connection signal="timeout" from="AI/PatrolTimer" to="AI" method="_on_PatrolTimer_timeout"]
[connection signal="timeout" from="AI/ChargeTimer" to="AI" method="_on_ChargeTimer_timeout"]
[connection signal="timeout" from="AI/ChargeDuration" to="AI" method="_on_ChargeDuration_timeout"]
[connection signal="body_entered" from="AI/ChargeDetection" to="AI" method="_on_ChargeDetection_body_entered"]
